--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     teste
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- Altere type="module" para type="application/javascript" -->
+    <script type="application/javascript" src="/src/main.jsx"></script>
   </body>
 </html>
