--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body>
     teste
     <div id="root"></div>
-    <!-- Altere type="module" para type="application/javascript" -->
-    <script type="application/javascript" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
